lintian (2.2.15) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - build-depends-on-non-build-package
      - example-interpreter-in-usr-local (pedantic)
      - example-interpreter-not-absolute
      - example-script-without-interpreter
      - example-script-uses-bin-env
      - example-shell-script-fails-syntax-check (pedantic)
      - example-wrong-path-for-interpreter
      - example-unusual-interpreter (pedantic)
      - global-data-in-games-directory
      - init.d-script-does-not-provide-itself
      - init.d-script-possible-missing-stop
      - init.d-script-provides-virtual-facility
      - init.d-script-should-depend-on-virtual-facility
      - init.d-script-starts-in-stop-runlevel
      - ocaml-custom-executable
  
  * checks/binaries{,.desc}:
    + [RA] Add a new check for OCaml bytecode executables.  Patch from
      Stéphane Glondu.  (Closes: #498138)
  * checks/changelog-file:
    + [RA] Don't warn about a symlinked changelog file if the version
      contains ubuntu.  Thanks, Benjamin Drung.  (Closes: #536434)
  * checks/common_data.pm:
    + [RA] Moved the essential package list to data/fields.
  * checks/copyright-file:
    + [RA] Use Lintian::Data to read the essential package list.
  * checks/debhelper:
    + [RA] Ignore whitespace when checking debian/compat, since Perl will
      when converting it to a number.  Thanks, Niels Thykier.
      (Closes: #545430)
  * checks/fields{,.desc}:
    + [RA] Exclude base-files from the needlesly-depends-on-awk tag
      and from the warning about depending on a virtual package without
      a real package for the awk virtual package.
    + [RA] Use Lintian::Data to read the essential package list.
    + [RA] Stop allowing unversioned build dependencies on coreutils.  The
      migration from fileutils is long since finished.
    + [RA] Check for build dependencies on packages that should not be
      used for builds.  (Closes: #540594)