@@ -352,3 +352,15 @@ Info: kdelnk files were used by KDE 1 and since KDE 2 desktop files are used
  instead.  Renaming the file and removing the deprecated header and keys
  is often all that needs to be done.
 Ref: http://standards.freedesktop.org/desktop-entry-spec/1.0/apc.html
+
+Tag: desktop-entry-limited-to-environments
+Severity: normal
+Certainty: wild-guess
+Info: This desktop entry uses OnlyShowIn to limit the environments in
+ which it's displayed but lists multiple environments.  This is often a
+ sign of a desktop file written assuming that only GNOME, KDE, and Xfce
+ are in use and the desktop file intended to exclude one of them.  This
+ unintentionally hides the application from desktop environments such as
+ LXDE where it would work fine.  If this application supports any desktop
+ environment except some specific ones, it should list the unsupported
+ environments in the NotShowIn key instead.
