@@ -1,0 +1,10 @@
+#!/usr/bin/make -f
+
+pkg = $(shell dh_listpackages)
+
+%:
+	dh $@
+
+override_dh_fixperms:
+	dh_fixperms
+	chmod a+x debian/$(pkg)/usr/share/applications/general.desktop
